--- a/css/layout.css
+++ b/css/layout.css
@@ -1,4 +1,3 @@
-/* mobile first */
 .grid-container {
   /* display: grid; */
   height: 90vh;
@@ -10,55 +9,25 @@
     "main"
     "ft";
 }
-
-.box {
-  border: 1px solid blue;
-}
-
-.header {
-  grid-area: hd;
-}
-
-.sidebar {
-  grid-area: sd;
-}
-
-.content {
-  grid-area: main;
-}
-
-.footer {
-  grid-area: ft;
-}
-
-header h1 {
-  font-family: "Comfortaa", cursive;
-}
-
-.project-gallery-container {
+.nav {
   display: flex;
-  flex-flow: row wrap;
-  /* align-items: center; */
-  justify-content: space-evenly;
-  border: 2px solid yellow;
-}
-
-.card {
-  width: 250px;
-  height: 150px;
-  border: 1px solid red;
+  flex-flow: row;
 }
 
 @media (min-width: 600px) and (max-width: 1100px) {
   .grid-container {
     display: grid;
     grid-template-columns: 100px 300px 300px;
-    grid-template-rows: 150px 1fr 50px;
+    grid-template-rows: 200px 1fr 50px;
     grid-template-areas:
       "hd hd hd hd hd hd hd hd"
       "sd main main main main main main main"
       "ft ft ft ft ft ft ft ft";
     border: 2px solid aquamarine;
+  }
+  .nav {
+    display: flex;
+    flex-flow: column wrap;
   }
 }
 
@@ -66,11 +35,15 @@ header h1 {
   .grid-container {
     display: grid;
     grid-template-columns: 200px 300px 300px;
-    grid-template-rows: 150px 1fr 50px;
+    grid-template-rows: 200px 1fr 50px;
     grid-template-areas:
       "hd hd hd hd hd hd hd hd"
       "sd main main main main main main main"
       "ft ft ft ft ft ft ft ft";
     border: 2px solid purple;
+  }
+  .nav {
+    display: flex;
+    flex-flow: column wrap;
   }
 }
