--- a/css/layout.css
+++ b/css/layout.css
@@ -1,8 +1,10 @@
 .grid-container {
   /* display: grid; */
+  /* margin: auto; */
+  margin-top: 30px;
   height: 90vh;
   grid-template-columns: 850px;
-  grid-template-rows: 150px 1fr 50px;
+  grid-template-rows: 200px 50px 1fr 50px;
   grid-template-areas:
     "hd"
     "sd"
@@ -18,7 +20,7 @@
   .grid-container {
     display: grid;
     grid-template-columns: 100px 300px 300px;
-    grid-template-rows: 200px 1fr 50px;
+    grid-template-rows: 250px 1fr 50px;
     grid-template-areas:
       "hd hd hd hd hd hd hd hd"
       "sd main main main main main main main"
@@ -35,7 +37,7 @@
   .grid-container {
     display: grid;
     grid-template-columns: 200px 300px 300px;
-    grid-template-rows: 200px 1fr 50px;
+    grid-template-rows: 250px 1fr 50px;
     grid-template-areas:
       "hd hd hd hd hd hd hd hd"
       "sd main main main main main main main"
