--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,17 @@
 @import "./header.css";
 @import "./blog-cards.css";
 
+body {
+  background-color: #fbf0ef;
+}
 .box {
   border: 1px solid blue;
 }
 
 .header {
   grid-area: hd;
+  background-image: url("https://images.unsplash.com/photo-1506567859980-33c9c423649f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&q=80");
+  background-size: auto;
 }
 
 .sidebar {
