--- a/css/layout.css
+++ b/css/layout.css
@@ -14,13 +14,14 @@
 .nav {
   display: flex;
   flex-flow: row;
+  justify-content: space-around;
 }
 
 @media (min-width: 600px) and (max-width: 1100px) {
   .grid-container {
     display: grid;
     grid-template-columns: 100px 300px 300px;
-    grid-template-rows: 250px 1fr 50px;
+    grid-template-rows: 1fr 1fr 50px;
     grid-template-areas:
       "hd hd hd hd hd hd hd hd"
       "sd main main main main main main main"
@@ -29,7 +30,10 @@
   }
   .nav {
     display: flex;
-    flex-flow: column wrap;
+    flex-flow: column;
+    gap: 30px 30px;
+    align-items: center;
+    margin-top: 30px;
   }
 }
 
@@ -37,7 +41,7 @@
   .grid-container {
     display: grid;
     grid-template-columns: 200px 300px 300px;
-    grid-template-rows: 250px 1fr 50px;
+    grid-template-rows: 1fr 1fr 50px;
     grid-template-areas:
       "hd hd hd hd hd hd hd hd"
       "sd main main main main main main main"
@@ -47,5 +51,8 @@
   .nav {
     display: flex;
     flex-flow: column wrap;
+    gap: 30px 30px;
+    align-items: center;
+    margin-top: 30px;
   }
 }
