--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,8 @@ body {
 .project-gallery-container {
   display: flex;
   flex-flow: row wrap;
-  /* align-items: center; */
   justify-content: space-evenly;
+  align-content: center;
+  gap: 15px 15px;
   border: 2px solid yellow;
 }
